--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
+    "@angular/google-maps": "^12.2.3",
     "@angular/localize": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@types/google-maps": "^3.2.3",
     "bootstrap": "^4.5.0",
+    "google-maps": "^4.3.3",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
