--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/router": "~12.1.1",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@types/google-maps": "^3.2.3",
+    "angular-recaptcha3": "^2.0.0",
     "bootstrap": "^4.5.0",
     "google-maps": "^4.3.3",
     "jquery": "^3.6.0",
+    "ng-recaptcha": "^8.0.1",
+    "ng-recaptcha3": "^1.3.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
